# Job_rec_sys_base_KG

./: .gitignore  README.md  RecSys.md  main.py  pyproject.toml
.claude/: project-template.md
data/: README.md
docs/: 00-项目讲解文档.md  01-软件工程设计文档.md  02-数据需求规格.md  03-面试知识清单.md  04-赛题需求规格.md  05-改动记录.md
logs/: README.md
models/: README.md  lightgcn_model.pt
ref/: 01-参考文献总览.md  02-文献应用映射报告.md  03-文献综合分析.md  04-论文索引.md  FRONTIER_UPGRADES.md  REFERENCES.md
results/: README.md
src/: __init__.py
src/analytics/: __init__.py  trends.py
src/api/: __init__.py  routes.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  anonymizer.py  generator.py  loader.py  models.py
src/generation/: __init__.py  langgraph_workflow.py  llm_simulator.py
src/matching/: __init__.py  reverse_matcher.py
src/metrics/: __init__.py  ab_test.py  effectiveness.py  llm_eval.py  online_metrics.py
src/models/: __init__.py  gat.py
src/ranking/: __init__.py  gat_weighter.py  linear_fusion.py  skill_coverage.py
src/recall/: __init__.py  ensemble_recall.py  lightgcn.py  sbert_recall.py
src/utils/: __init__.py  crypto.py  training.py
